--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
+      <meta charset="utf-8">
     <title>Busy Bus</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   </head>
   <body>
-    <div>
 
-<!-- Status Bar -->
 
-      <header >
+      <header>
         <nav>
           <div class="header">
             <i class="fas fa-chevron-left"></i>
@@ -31,125 +30,102 @@
 
 <!-- Eastbound -->
 
-    <div class="backgroundcolor">
-      <div>
-        <p>Eastbound</p>
-      </div>
 
-      <div>
+        <h3>Eastbound</h3>
+
+
+
         <ul>
           <li class="busNum">60</li>
           <li class="des">Randolph/HarborDr</li>
           <li class="freq">20 mins</li>
         </ul>
-      </div>
 
 
 
-      <div class="breaker">
-        <div>
-        <ul>
+
+        <ul class="breaker">
           <li class="busNum">124</li>
           <li class="des">Navy Pier</li>
           <li class="freq">10 mins</li>
         </ul>
-      </div>
-      </div>
 
 
 <!-- Northbound -->
 
-      <div>
-        <p>Northbound</p>
-      </div>
 
-      <div class="breaker">
-      <div>
-        <ul>
+        <h3>Northbound</h3>
+
+
+
+        <ul class="breaker">
           <li class="busNum">151</li>
           <li class="des">Devon/Clark</li>
           <li class="freq">16 mins</li>
         </ul>
-      </div>
-    </div>
+
 
 
 <!-- Southbound -->
 
-  <div>
-    <p>Southbound</p>
-  </div>
 
-      <div>
+    <h3>Southbound</h3>
+
+
         <ul>
           <li class="busNum">J14</li>
           <li class="des">103rd/Stony Island</li>
           <li class="freq">15 mins</li>
         </ul>
-      </div>
 
 
 
-      <div class="breaker">
-      <div>
-        <ul>
+
+
+        <ul class="breaker">
           <li class="busNum">124</li>
           <li class="des">Navy Pier</li>
           <li class="freq">10 mins</li>
         </ul>
-      </div>
-    </div>
+
 
 <!-- Reroute -->
-  <div>
-    <p>Reroute</p>
-  </div>
-      <div class="breaker">
-      <div>
-        <ul>
+    <h3>Reroute</h3>
+
+
+        <ul class="breaker">
           <li class="busNum">6x</li>
           <li class="des">Jackson Park Express</li>
           <li class="freq">N/A</li>
         </ul>
-      </div>
-    </div>
+
 
 <!-- Out of Service  -->
 
-  <div>
-    <p>Out of Service</p>
-  </div>
+    <h3>Out of Service</h3>
 
-      <div>
         <ul>
           <li class="busNum">4</li>
           <li class="des">Cottage Grove</li>
           <li class="freq">12:10am</li>
         </ul>
-      </div>
 
 
 
-      <div>
         <ul>
           <li class="busNum">20</li>
           <li class="des">Madison</li>
           <li class="freq">12:10am</li>
         </ul>
-      </div>
 
 
 
 
-      <div>
         <ul>
           <li class="busNum">157</li>
           <li class="des">Streeterville/Taylor</li>
           <li class="freq">6:00am</li>
         </ul>
-      </div>
-    </div>
 
-    </div>
   </body>
 </html>
