--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
       <header>
         <nav>
+          <img src="images/statusbar.png" alt="status bar" class="status-bar">
           <div class="header">
             <i class="fas fa-chevron-left"></i>
             <h1>Washington & State</h1>
